# letras

./: CMakeLists.txt  TODO  board.cpp  board.h  dict.cpp  dict.h  game.cpp  game.h  main.cpp  player.cpp  tile.cpp
src/: action.h  bag.cpp  bag.h  basic_types.h  board.cpp  board.h  button.cpp  button.h  cpu_player.cpp  cpu_player.h  dict.cpp  game.cpp  game.h  human_player.cpp  human_player.h  main.cpp  play.cpp  play.h  player.cpp  player.h  score.cpp  score.h  square.cpp  square.h  tile.cpp  tile.h  wildcard_picker.cpp  wildcard_picker.h
src/cpu/: algorithm.cpp  algorithm.h  cpu_player.cpp  cpu_player.h
src/play_rules/: calc_score.cpp  calc_score.h  connected.cpp  connected.h  contiguous.cpp  contiguous.h  dict_check.cpp  dict_check.h  first_move.cpp  first_move.h  play.cpp  play.h  play_builder.cpp  play_builder.h  play_rule.h
src/restrictions/: connected.cpp  connected.h  contiguous.cpp  contiguous.h  dict_check.cpp  dict_check.h  first_move.cpp  first_move.h  restriction.h
test/: algorithm_tests.cpp  board_tests.cpp  dict_tests.cpp  mocks.h  play_rules_tests.cpp  player_tests.cpp
